Fix color contrast

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -8,6 +8,7 @@ header {
 }
 
 header h1,
+header h3,
 header h4,
 header h5,
 header a,
@@ -43,9 +44,6 @@ a:hover, a:focus, a:active, a:visited, a:link{
 }
 
 @media screen and (min-width: 320px) {
-  .navbar-brand {
-    font-size: 10px;
-  }
   .header-q {
    width: 80%;
   }
